--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,30 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+
+# Internal util used in this project
+.activation
+
+# Unsloth cache (machine-specific)
+unsloth_compiled_cache/
+
+# Data (huge)
+data/raw/
+data/clean/
+
+# Large models
+models/osrs-phi-finetuned/
+models/phi-3.5-mini/  # base model download
+
+# Python cache
+__pycache__/
+*.pyc
+.env
+
+# Streamlit
+.streamlit/
+
+# OS junk
+.DS_Store
+Thumbs.db
