--- a/.gitignore
+++ b/.gitignore
@@ -188,13 +188,20 @@ cython_debug/
 unsloth_compiled_cache/
 
 # Data (huge)
-data/raw/
-data/clean/
+data/raw/**
+!data/raw/**/.gitkeep
+
+data/clean/general/*
+data/clean/sections/*
+data/clean/summaries/*
+data/clean/tables/*
+!data/clean/**/.gitkeep
 
 # Large models - download separately
-models/
+models/*
 models/osrs-phi-finetuned/
 models/phi-3.5-mini/  # base model download
+!models/**/.gitkeep
 
 # Python cache
 __pycache__/
@@ -207,3 +214,7 @@ __pycache__/
 # OS junk
 .DS_Store
 Thumbs.db
+
+
+#!**/.gitkeep
+
